<resources>
    <string name="app_name">TestTask</string>
    <string name="add">Add</string>
    <string name="name">Name: %1s</string>
    <string name="age">Age: %1d (%2s)</string>
    <string name="student">Student: </string>
    <string name="description">Description: %1s</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="isStudent">Student: %1s</string>
    <string name="action_add_user">Add User</string>
    <string name="enter_name">Name</string>
    <string name="enter_description">Description</string>
    <string name="enter_birthday">Birthday</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="delete_user_dialog">You want to delete this User?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_sorting">Sorting</string>
    <string name="pick_sort">Pick type of sort:</string>
    <string-array name="sort_types">
        <item>Sort by name (Alphabetical)</item>
        <item>Sort by age (youngest first) </item>
        <item>Sort by student status (student first)</item>
        <item>Sort by description (Short description first)</item>
    </string-array>
</resources>